src/test/ui/hr-subtype/hr-subtype.bound_a_vs_free_x.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:39:26
   |
LL |               gimme::<$t1>(None::<$t2>);
   |                            ^^^^^^^^^^^ expected concrete lifetime, found bound lifetime parameter 'a
...
LL | / check! { bound_a_vs_free_x: (for<'a> fn(&'a u32),
LL | |                              fn(&'x u32)) }
   | |___________________________________________- in this macro invocation
   |
   = note: expected enum `std::option::Option<for<'a> fn(&'a u32)>`
              found enum `std::option::Option<fn(&'x u32)>`
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
